tests/sksl/errors/WhileTypeMismatch.glsl
### Compilation failed:

error: 2: expected 'bool', but found 'float3'
    while (float3(1)) {}
           ^^^^^^^^^
1 error
